force-app/main/default/objects/Security_Health_Check_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Central_Org_URL__c</fullName>
        <inlineHelpText>The endpoint URI to send data to (Please only enter the part after the host name)
This is captured separately to the named credential as the URL for anonymous services is different to authenticated services.</inlineHelpText>
        <label>Central Org URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_the_Central_org__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is the org that will be managing the central reporting. This controls the version of the Security Health Check App that is shown</inlineHelpText>
        <label>Is this the Central org?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Credentials__c</fullName>
        <inlineHelpText>Enter the named credentials to use.  If you wish to use anonymous services, you will still need to define a named credential.</inlineHelpText>
        <label>Named Credentials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Superstar_Threshold__c</fullName>
        <description>The number of points needed to become a security superstar.</description>
        <inlineHelpText>The number of points needed to become a security superstar.</inlineHelpText>
        <label>Security Superstar Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <inlineHelpText>The token for this org (this should be sent to you by the central org administrator)</inlineHelpText>
        <label>Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Security Health Check Config</label>
    <pluralLabel>Security Health Check Configs</pluralLabel>
</CustomObject>